# ctest-resource-sample

./: CMakeLists.txt  README.md  cmake-resource-parsing.hpp  main.cpp  resource.json
